--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
 		"forward_list": "cpp",
 		"initializer_list": "cpp",
 		"list": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"xmemory": "cpp"
 	}
 }
