--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "components/WiFiManager"]
 	path = components/WiFiManager
 	url = https://github.com/ixsiid/WiFiManager.git
+[submodule "components/M5GFX"]
+	path = components/M5GFX
+	url = https://github.com/m5stack/M5GFX.git
