LCDにステータスを表示

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.cpp" "button.cpp"
-                    PRIV_REQUIRES nvs_flash switchbot-nimble-client WiFiManager Echonet-lite
+idf_component_register(SRCS "main.cpp" "button.cpp" "NatureLogo.cpp"
+                    PRIV_REQUIRES nvs_flash M5GFX switchbot-nimble-client WiFiManager Echonet-lite
                     INCLUDE_DIRS ".")
