--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components/M5GFX"]
 	path = components/M5GFX
 	url = https://github.com/m5stack/M5GFX.git
+[submodule "components/esp-ECHONET-Lite"]
+	path = components/esp-ECHONET-Lite
+	url = https://github.com/ixsiid/esp-ECHONET-Lite.git
