--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"idf.adapterTargetName": "esp32",
+	"idf.adapterTargetName": "esp32s3",
 	"C_Cpp.intelliSenseEngine": "Tag Parser",
 	"files.associations": {
 		"regex": "c",
