--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,4 @@
-idf_component_register(SRCS "main.cpp" "button.cpp" "NatureLogo.cpp"
-                    PRIV_REQUIRES nvs_flash M5GFX switchbot-nimble-client WiFiManager esp-ECHONET-Lite
+idf_component_register(SRCS "main.cpp" "button.cpp"
+                    PRIV_REQUIRES nvs_flash switchbot-nimble-client WiFiManager esp-ECHONET-Lite simple_ws2812_rmt_esp-idf
+#                   PRIV_REQUIRES M5GFX
                     INCLUDE_DIRS ".")
